# kcsec

./: .dockerignore  .env.sample  .gitignore  .travis.yml  Dockerfile  Makefile  Makefile.docker  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini
.github/workflows/: build-and-test.yml  docker.yml  kcsec-ci.yml
kcsec/: __init__.py
kcsec/config/: asgi.py  routing.py  urls.py  wsgi.py
kcsec/config/settings/: common.py  docker.py  local.py  test.py
kcsec/core/: admin.py  apps.py  base.py  forms.py  meta.py  urls.py  views.py
kcsec/core/migrations/: 0001_initial.py  0001_portfolio.py  0002_balance_margin.py  0003_portfolio_margin_balance_annon_user.py
kcsec/core/models/: __init__.py  _meta.py  exhange.py  portfolio.py  sector.py  tag.py  trade.py
kcsec/crypto/: apps.py  consumer.py  filter_sets.py  forms.py  routing.py  seeds.py  serializers.py  types.py  urls.py  views.py
kcsec/crypto/admin/: __init__.py  asset.py  exchange.py  ohlcv.py  order.py  quote.py  share.py  symbol.py
kcsec/crypto/channels/: gemini.py
kcsec/crypto/client/: __init__.py  consumer.py  gemini.py  order_book.py
kcsec/crypto/management/: seeds.py
kcsec/crypto/migrations/: 0001_initial.py  0002_auto_20200829_1836.py  0003_auto_20200906_1459.py  0004_auto_20200906_1558.py  0005_auto_20200906_1644.py  0006_auto_20200907_2134.py  0007_ohlcv.py  0008_auto_20200927_1542.py  0009_order_share.py  0009_share_and_order.py  0010_order_and_trade_type.py  0011_share_percent_change.py  0012_ohlcv_timeframe.py  0013_remove_not_used_and_refactor_composite_keys.py  0014_remove_percent_change_rename_crypto_symbol.py
kcsec/crypto/models/: __init__.py  _managers.py  _meta.py  _querysets.py  asset.py  exchange.py  ohlcv.py  order.py  quote.py  share.py  symbol.py
kcsec/crypto/tests/: conftest.py  test_forms.py  (+2 more)
kcsec/securities/: apps.py
kubernetes/: ingress.yaml
kubernetes/channels/: deployment.yaml  service.yaml
kubernetes/crypto-consumer/: deployment.yaml  service.yaml
kubernetes/paper-trader/: configmap.yaml  deployment.yaml  job-init-postgres.yaml  secrets.yaml  service.yaml
kubernetes/postgres/: deployment.yaml  secrets.yaml  service.yaml
kubernetes/redis/: deployment.yaml  service.yaml
tests/: test_kcsec.py
(+82 files in other folders)
