[tool.poetry]
name = "kcsec"
version = "0.1.0"
description = ""
authors = ["KevinCybura <KevinCybura@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
django-extensions = "^3.0.5"
psycopg2-binary = "^2.8.5"
django-postgres-extra = "^1.22"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.4.2"
pytest = "^6.0.1"

[tool.isort]
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | dist
    | staticfiles
  )/
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
